# traefik-deployments

./: LICENSE  README.md  appctl
docs/: Dockerfile  docker-compose.yml
docs/app/: layout.html  main.py
docs/data/: README.md
excalidraw/: .env-example  README.md  docker-compose.yml
gitea/: README.md  docker-compose.yml
jellyfin/: .env-example  .gitignore  README.md  docker-compose.yml
learning/: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
learning/app/: config.py  controllers.py  database.py  main.py  models.py  routes.py
learning/tests/: test_endpoints.py
mermaid/: .env-example  .gitignore  README.md  docker-compose.yml
mongo-docker/: .env-example  README.md  WARP.md  docker-compose.yml  keyfile  test_transaction.js
ollama/: .env-example  .gitignore  README.md  docker-compose.yml
pgsql/: docker-compose.yml
